# reachy_mini

./: pyproject.toml
docs/source/SDK/: integration.md  mcp.md
src/reachy_mini/daemon/app/: main.py
src/reachy_mini/daemon/app/routers/: mcp_server.py
