[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini"
version = "1.4.1"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.5",
    "scipy>=1.15.3, <2.0.0",
    "reachy_mini_motor_controller>=1.5.5",
    "opencv-python<=5.0",
    "cv2_enumerate_cameras>=1.2.1",
    "psutil",
    "jinja2",
    "uvicorn[standard]",
    "fastapi",
    "pyserial",
    "huggingface-hub==1.3.0",
    "reachy-mini-rust-kinematics>=1.0.3",
    "asgiref",
    "aiohttp",
    "log-throttling==0.0.3",
    "pyusb>=1.2.1",
    "libusb_package>=1.0.26.3",
    "pip>=25",
    "rich",
    "questionary",
    "websockets>=12,<16",
    "toml",
    "rustypot>=1.4.2",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "zeroconf>=0.131,<1",
    "pycaw>=20240210; sys_platform == 'win32'",
    "pulsectl>=24.1.0; sys_platform == 'linux'",

    "gstreamer-bundle==1.28.1; sys_platform != 'linux'",
    # OS-specific: use PyGObject for Linux
    "PyGObject>=3.42.2,<=3.46.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
examples = ["pynput", "soundfile"]
mujoco = ["mujoco==3.3.0"]
nn_kinematics = ["onnxruntime==1.22.1"]
placo_kinematics = ["placo==0.9.14; sys_platform != 'win32'"]
rerun = ["rerun-sdk==0.27.2", "urdf-parser-py==0.0.4"]
wireless-version = [
    "semver>=3,<4",
    "nmcli>=1.5; sys_platform == 'linux'",
    "pollen_BMI088_imu_library; sys_platform == 'linux'",
    "gpiozero>=2.0.0; sys_platform == 'linux'",
    "lgpio>=0.2.2.0; sys_platform == 'linux'",
]
openclaw = ["fastmcp>=2.0"]
sounddevice = ["sounddevice==0.5.1", "soundfile"]
opencv = ["opencv-python<=5.0", "cv2_enumerate_cameras>=1.2.1"]
all = [
    "reachy_mini[examples]",
    "reachy_mini[mujoco]",
    "reachy_mini[nn_kinematics]",
    "reachy_mini[placo_kinematics]",
    "reachy_mini[gstreamer]",
    "reachy_mini[rerun]",
    "reachy_mini[wireless-version]",
    "reachy_mini[sounddevice]",
    "reachy_mini[opencv]"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff==0.12.0",
    "onshape-to-robot==1.7.6",
    "pre-commit",
    "mypy==1.18.2",
    "types-requests",
    "types-toml",
    "types-PyYAML",
]

[project.scripts]
reachy-mini-daemon = "reachy_mini.daemon.app.main:main"
reachy-mini-app-assistant = "reachy_mini.apps.app:main"
reachy-mini-reflash-motors = "reachy_mini.tools.reflash_motors:main"

[tool.uv]
dependency-metadata = [
    # Upstream metadata currently marks `gstreamer-msvc-runtime` as unconditional.
    # It should only be required on Windows.
    { name = "gstreamer-libs", version = "1.28.1", requires-dist = ["gstreamer-msvc-runtime; sys_platform == 'win32'", "setuptools"] },
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
reachy_mini = ["**/*"] # includes all non .py files

[tool.ruff]
exclude = [
    "src/reachy_mini/__init__.py",
    "build/*",
    "conftest.py",
    "src/reachy_mini_dashboard/*",
    "tests/*",
]
lint.extend-select = ["I", "D"]
lint.ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
]

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"]
markers = [
    "audio: mark test as requiring audio hardware",
    "audio_sounddevice: mark test as requiring Sounddevice for audio",
    "video: mark test as requiring video hardware",
    "video_opencv: mark test as requiring OpenCV for video",
    "wireless: mark test as requiring wireless Reachy Mini",
]

[tool.mypy]
python_version = "3.12"
files = ["src/", "examples/"]
ignore_missing_imports = true
strict = true
